# GRIDtools

./: README.md  pyproject.toml  requirements.txt
Examples/: Example01_Zonal_Module.ipynb  area_weighted_precip_test.ipynb
Examples/cache/: aiohttp_cache.sqlite
GRIDtools/: mesh.py  utils.py  watershed.py  zonal.py
cache/: aiohttp_cache.sqlite
requirements/: GRIDtools_stable.yml  gridtools.yaml  gridtools_requirements.txt
scripts/: GRIDtools_Zonal.py  arrayzonal.py  nhdzonal.py  zonal.py
src/GRIDtools/: __init__.py  config.py  utils.py  watershed.py  zonal.py
test/: area_weighted_precip_development_comparisons.ipynb  area_weighted_precip_test.ipynb  function_tests.py  inputs.toml  main.py  zonal_script.py
test/cache/: aiohttp_cache.sqlite
