[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GRIDtools"
version = "0.2.0"
description = 'Suite of commonly used functions and utilities for working with gridded data.'
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["grids", "rasters", "hydrology", "climate"]
authors = [
    {name = "T.L. Blythe", email = "todd.blythe@mt.gov"}
]
maintainers = [
    {name = "MT Dept. of Natural Resources and Conservation", email = "todd.blythe@mt.gov"}
]
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Water Scientists",
  "Topic :: Gridded Data Analysis :: Hydrology and Climate Data",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "geopandas",
    "rasterio",
    "xarray",
    "rioxarray"
]
[project.urls]
"Homepage" = "https://github.com/MTDNRC-WRD/GRIDtools"
"Bug Reports" = "https://github.com/MTDNRC-WRD/GRIDtools/issues"
"Source" = "https://github.com/MTDNRC-WRD/GRIDtools/refs/heads/main.zip"